--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.8.0"
+cargo-watch = "8.5.2"
 charybdis = "0.7.2"
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 colog = "1.3.0"
 dotenvy = "0.15.7"
 log = "0.4.22"
