--- a/extension/package.json
+++ b/extension/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
+    "dev:firefox": "plasmo dev --target=firefox-mv2",
     "package": "plasmo package"
   },
   "dependencies": {
