--- a/extension/package.json
+++ b/extension/package.json
@@ -30,7 +30,8 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
