--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -1,20 +1,16 @@
 {
   "extends": "plasmo/templates/tsconfig.base",
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "include": ["./**/*.ts", "./**/*.tsx", ".plasmo/index.d.ts"],
   "compilerOptions": {
-    "types": [
-      "firefox-webext-browser",
-      "chrome"
-    ],
+    "types": ["firefox-webext-browser", "chrome", "node"],
     "paths": {
       "~*": ["./src/*"],
       "@Shad/*": ["./src/resources/shad/*"],
       "@Components/*": ["./src/resources/components/*"],
-      "@Pages/*": ["./src/resources/pages/*"]
+      "@Pages/*": ["./src/resources/pages/*"],
+      "@Config/*": ["./src/config/*"]
     },
     "baseUrl": "."
-  },
+  }
 }
