--- a/extension/package.json
+++ b/extension/package.json
@@ -30,7 +30,8 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "webextension-polyfill-ts": "^0.26.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -38,9 +39,11 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@types/webextension-polyfill": "^0.10.7",
     "postcss": "8.4.33",
     "prettier": "3.2.4",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "webextension-polyfill": "^0.12.0"
   },
   "manifest": {
     "permissions": [
