--- a/extension/package.json
+++ b/extension/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@plasmohq/messaging": "^0.6.2",
+    "@plasmohq/storage": "^1.11.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -31,8 +32,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "webextension-polyfill": "^0.12.0"
+    "webextension-polyfill": "^0.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -47,6 +48,13 @@
     "webextension-polyfill": "^0.12.0"
   },
   "manifest": {
+    "browser_specific_settings": {
+      "gecko": {
+        "id": "firefox@betterttc.dev",
+        "strict_min_version": "42.0"
+      }
+    },
+
     "permissions": [
       "scripting",
       "activeTab",
