--- a/extension/package.json
+++ b/extension/package.json
@@ -36,6 +36,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.258",
     "@types/node": "20.11.5",
@@ -54,7 +55,6 @@
         "strict_min_version": "109.0"
       }
     },
-
     "permissions": [
       "scripting",
       "activeTab",
