--- a/extension/package.json
+++ b/extension/package.json
@@ -8,7 +8,9 @@
     "dev": "plasmo dev",
     "build": "plasmo build",
     "dev:firefox": "plasmo dev --target=firefox-mv2",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "check": "biome check",
+    "check:fix": "biome check --write"
   },
   "dependencies": {
     "@plasmohq/messaging": "^0.6.2",
@@ -36,6 +38,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.258",
     "@types/node": "20.11.5",
@@ -54,7 +57,6 @@
         "strict_min_version": "109.0"
       }
     },
-
     "permissions": [
       "scripting",
       "activeTab",
