feat: removing unused permissions

--- a/extension/package.json
+++ b/extension/package.json
@@ -58,17 +58,11 @@
       }
     },
     "permissions": [
-      "scripting",
       "activeTab",
-      "tabs",
       "identity",
       "*://*.twitch.tv/*",
       "https://twitch-extension.danielheart.dev/*",
-      "storage",
-      "http://localhost/*",
-      "http://localhost:8000/*",
-      "webRequest",
-      "webRequestBlocking"
+      "storage"
     ]
   }
 }
