--- a/extension/biome.jsonc
+++ b/extension/biome.jsonc
@@ -3,6 +3,9 @@
   "organizeImports": {
     "enabled": true
   },
+  "files": {
+    "ignore": [".plasmo", "node_modules", "build"]
+  },
   "linter": {
     "enabled": true,
     "rules": {
