feat: add tabs and about section

--- a/extension/package.json
+++ b/extension/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@types/firefox": "^0.0.34",
     "@types/firefox-webext-browser": "^120.0.4",
     "class-variance-authority": "^0.7.0",
