fix: adding template string

--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -11,7 +11,7 @@
       "@Pages/*": ["./src/resources/pages/*"],
       "@Config/*": ["./src/config/*"],
       "@Scripting/*": ["./src/scripting/*"],
-      "@Root/*": ["./*"],
+      "@Root/*": ["./*"]
     },
     "baseUrl": "."
   }
