--- a/platform/composer.json
+++ b/platform/composer.json
@@ -8,7 +8,10 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.15",
+        "laravel/tinker": "^2.9",
+        "predis/predis": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
