--- a/platform/composer.json
+++ b/platform/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "chrisreedio/socialment": "^3.9",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.9",
-        "predis/predis": "^2.0"
+        "predis/predis": "^2.0",
+        "socialiteproviders/twitch": "^5.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
