--- a/platform/composer.json
+++ b/platform/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "chrisreedio/socialment": "^3.9",
         "filament/filament": "^3.2",
+        "jeffgreco13/filament-breezy": "^2.4",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.15",
